--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "node": ">=19"
   },
   "scripts": {
-    "eslint": "eslint --ignore-path .gitignore --fix"
+    "eslint": "eslint --ignore-path .gitignore --fix",
+    "test": "node --test"
   },
   "devDependencies": {
     "eslint-config-xs": "^1.6.1"
